--- a/VulkanEngine/VulkanEngine.vcxproj
+++ b/VulkanEngine/VulkanEngine.vcxproj
@@ -22,7 +22,7 @@
     <ClCompile Include="..\Source\SourceFiles\main.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\Source\HeaderFiles\HelloTriangleApplication.h" />
+    <ClInclude Include="..\Source\HeaderFiles\VulkanApplicationBase.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
