--- a/VulkanEngine/VulkanEngine.vcxproj.filters
+++ b/VulkanEngine/VulkanEngine.vcxproj.filters
@@ -17,7 +17,7 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\Source\HeaderFiles\HelloTriangleApplication.h">
+    <ClInclude Include="..\Source\HeaderFiles\VulkanApplicationBase.h">
       <Filter>Source\HeaderFiles</Filter>
     </ClInclude>
   </ItemGroup>
